[gd_scene load_steps=6 format=2]

[ext_resource path="res://Script/Control.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Touch Area File/TouchArea.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 15.0

[sub_resource type="DynamicFont" id=2]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="TouchArea" type="Node2D"]
script = ExtResource( 3 )

[node name="BackgroundColor" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -30.0
margin_right = 30.0
margin_bottom = 30.0
color = Color( 0.580392, 0.580392, 0.580392, 1 )

[node name="AreaDragScreenRIGHT" type="TouchScreenButton" parent="."]
position = Vector2( 20, 0 )
shape = SubResource( 1 )
shape_centered = false
passby_press = true
script = ExtResource( 1 )

[node name="Label" type="Label" parent="AreaDragScreenRIGHT"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -10.0
margin_right = 20.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 2 )
text = "A"
align = 1
valign = 1

[node name="AreaDragScreenLEFT" type="TouchScreenButton" parent="."]
position = Vector2( -20, 0 )
shape = SubResource( 1 )
shape_centered = false
passby_press = true
script = ExtResource( 1 )

[node name="Label" type="Label" parent="AreaDragScreenLEFT"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -10.0
margin_right = 20.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 2 )
text = "B"
align = 1
valign = 1

[node name="AreaDragScreenUP" type="TouchScreenButton" parent="."]
position = Vector2( 0, -20 )
shape = SubResource( 1 )
shape_centered = false
passby_press = true
script = ExtResource( 1 )

[node name="Label" type="Label" parent="AreaDragScreenUP"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -10.0
margin_right = 20.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 2 )
text = "C"
align = 1
valign = 1

[node name="AreaDragScreenDOWN" type="TouchScreenButton" parent="."]
position = Vector2( 0, 20 )
shape = SubResource( 1 )
shape_centered = false
passby_press = true
script = ExtResource( 1 )

[node name="Label" type="Label" parent="AreaDragScreenDOWN"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -10.0
margin_right = 20.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 2 )
text = "D"
align = 1
valign = 1
